--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,7 +6,7 @@ body {
   font-family: 'IBM Plex Serif', serif;
 }
 
-#missionStatement {
+/* #missionStatement {
   text-align: center;
 }
 
@@ -15,4 +15,4 @@ body {
   text-align: center;
   font-family: 'IBM Plex Serif', serif;
 
-}
+} */
